Fix network stats with new systemd interface names

BUG: 315259
FIXED-IN: 4.11.2
REVIEW: 112319